update js password

--- a/index.html
+++ b/index.html
@@ -27,27 +27,27 @@
        
         <li>  
           <span>Numbers?</span>
-          <label class="boxes">
+          <label for="box1">
           <input type="checkbox" id="box1" /> 
           </label></li> <br>
       
        <li> 
         <span>Lowercase characters?</span>
-        <label class="boxes">
+        <label for="box2">
           <input type="checkbox" id="box2" /> 
           </label>
           </li>  <br>
 
        <li> 
         <span>Uppercase characters?</span> 
-        <label class="boxes">
+        <label for="box3">
             <input type="checkbox" id="box3" /> 
           </label>
           </li> <br>
 
       <li>  
         <span>Special Characters?</span>
-        <label class="boxes">
+        <label for="box4">
         <input type="checkbox" id="box4" /> 
       </label>
     </li><br>
@@ -57,8 +57,8 @@
   </form>
   
   <div class="enterChar">
-      <label class="pw-length">Please enter desired password length (between 8 to 128 characters). </label>
-      <input type="text" class="pw-length" id="pass-length" maxlength="3"/>
+      <label for="pass-length">Please enter desired password length (between 8 to 128 characters). </label>
+      <input type="text" id="pass-length" maxlength="3"/>
 
     </div>
 
